// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homework Row renders with completed count 1`] = `
<a
  aria-label="Work on homework: turn-key leverage content"
  className="task row homework workable"
  data-event-id={1}
  href="/course/1/task/1"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={0}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="homework icon"
      className="icon icon-lg icon-homework"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    turn-key leverage content
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      <span
        className="tour-anchor"
        data-tour-anchor-id="assignment-progress-status"
        id="assignment-progress-status"
      >
        2/3 answered
      </span>
    </span>
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Oct 11, 7:00am
    </time>
  </div>
</a>
`;

exports[`Homework Row renders with correct count 1`] = `
<a
  aria-label="Work on homework: out-of-the-box embrace supply-chains"
  className="task row homework workable"
  data-event-id={2}
  href="/course/2/task/2"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={0}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="homework icon"
      className="icon icon-lg icon-homework"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    out-of-the-box embrace supply-chains
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      <span
        className="tour-anchor"
        data-tour-anchor-id="assignment-progress-status"
        id="assignment-progress-status"
      >
        0/10 correct
      </span>
    </span>
    <span
      className="tour-anchor"
      data-tour-anchor-id="about-late-icon"
      id="about-late-icon"
    >
      <i
        className="info late"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Oct 11, 7:00am
    </time>
  </div>
</a>
`;

exports[`Homework Row renders with correct count 2`] = `
<a
  aria-label="Work on homework: out-of-the-box embrace supply-chains"
  className="task row homework workable"
  data-event-id={2}
  href="/course/2/task/2"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={0}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="homework icon"
      className="icon icon-lg icon-homework"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    out-of-the-box embrace supply-chains
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      <span
        className="tour-anchor"
        data-tour-anchor-id="assignment-progress-status"
        id="assignment-progress-status"
      >
        2/10 correct
      </span>
    </span>
    <span
      className="tour-anchor"
      data-tour-anchor-id="about-late-icon"
      id="about-late-icon"
    >
      <i
        className="info late"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Oct 11, 7:00am
    </time>
  </div>
</a>
`;
